--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-airbnb": "^7.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "nuxt": "^3.3.2"
+    "nuxt": "^3.3.2",
+    "sass": "^1.60.0",
+    "sass-loader": "^10.4.1"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.21.3",
