--- a/package.json
+++ b/package.json
@@ -7,29 +7,30 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
-    "lint:prettier": "prettier --check .",
-    "lint": "npm run lint:js && npm run lint:prettier",
-    "lintfix": "prettier --write --list-different . && npm run lint:js --fix"
+    "lint": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lintfix": "npm run lint --fix"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-module": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-airbnb": "^7.0.0",
+    "eslint": "^8.37.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.10.0",
     "nuxt": "^3.3.2",
     "sass": "^1.60.0",
-    "sass-loader": "^10.4.1"
+    "sass-loader": "^10.4.1",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.21.3",
     "@nuxtjs/eslint-config": "^12.0.0",
-    "@nuxtjs/eslint-module": "^4.0.2",
     "animejs": "^3.2.1",
-    "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.10.0",
     "prettier": "^2.8.7",
     "stats.js": "^0.17.0",
     "three": "^0.150.1",
