--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.8.7",
     "stats.js": "^0.17.0",
     "three": "^0.150.1",
+    "three-msdf-text-utils": "^1.1.0",
     "tweakpane": "^3.1.7"
   }
 }
