chore(nuxt): add pinia

--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.21.3",
     "@nuxtjs/eslint-config": "^12.0.0",
+    "@pinia/nuxt": "^0.4.8",
     "animejs": "^3.2.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "pinia": "^2.0.34",
     "prettier": "^2.8.7",
     "stats.js": "^0.17.0",
     "three": "^0.150.1",
-    "tweakpane": "^3.1.7"
+    "tweakpane": "^3.1.7",
+    "typescript": "^5.0.4"
   }
 }
