--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "motion": "^10.15.5",
     "pinia": "^2.0.34",
+    "pizzicato": "^0.6.4",
     "prettier": "^2.8.7",
     "stats.js": "^0.17.0",
     "three": "^0.150.1",
