--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "animejs": "^3.2.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "lottie-web": "^5.12.0",
     "motion": "^10.15.5",
     "pinia": "^2.0.34",
     "pizzicato": "^0.6.4",
