--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/eslint-parser": "^7.21.3",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@pinia/nuxt": "^0.4.8",
+    "@vueuse/core": "^10.2.0",
     "animejs": "^3.2.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
