Add lenis + anchro drop

--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@babel/eslint-parser": "^7.21.3",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@pinia/nuxt": "^0.4.8",
+    "@studio-freight/lenis": "^1.0.16",
     "@vueuse/core": "^10.2.0",
     "animejs": "^3.2.1",
     "detect-gpu": "^5.0.29",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "keen-slider": "^6.8.5",
-    "locomotive-scroll": "^5.0.0-beta.8",
     "lottie-web": "^5.12.0",
     "motion": "^10.15.5",
     "pinia": "^2.0.34",
