--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@studio-freight/lenis": "^1.0.16",
     "@vueuse/core": "^10.2.0",
     "animejs": "^3.2.1",
+    "bowser": "^2.11.0",
     "detect-gpu": "^5.0.29",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
